<resources>
    <string name="app_name">Forecaster</string>
    <string name="splash_name">FORECASTER</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started">Let\'s Get started</string>
    <string name="forecaster_means_profits">Forecaster means profits</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_email_and_password_login">Enter your email and password to login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait..</string>
    <string name="sign_up_description">Enter your name, email and password to sign up</string>
    <string name="name">Name</string>
    <string name="dddzzz">dddzzz</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="favourites">Favourites</string>
    <string name="calendar">Calendar</string>
    <string name="cot_reports">COT Reports</string>
    <string name="rankings">Rankings</string>
    <string name="breakeven">Breakeven</string>
    <string name="quantum_screener">Quantum Screener</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="floatingactionbar">FloatingActionBar</string>
    <string name="are_you_sure_to_sign_out_of_the_account">Do you want to sign out of the account?</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="add_task">ADD TASk</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="add_task_calendar_dialog">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="currencies">Currencies</string>
    <string name="agriculture">Agriculture</string>
    <string name="metals_and_other">Metals and Other</string>
    <string name="stock_indexes">Stock Indexes</string>
    <string name="petroleum_and_products">Petroleum and Products</string>
    <string name="treasuries_and_rates">Treasuries and Rates</string>
    <string name="natural_gas_and_products">Natural Gas and products</string>
    <string name="title">Title</string>
    <string name="official">Official</string>
    <string name="synthetic">Synthetic</string>
    <string name="synthetic_currencies">These COT Reports aren\'t official, they are generated by merging official contracts.</string>
    <string name="world">World</string>
    <string name="europe">Europe</string>
    <string name="latin_america">Latin America</string>
    <string name="north_america">North America</string>
    <string name="asia">Asia</string>
    <string name="oceania">Oceania</string>
    <string name="tag">Tag</string>
    <string name="us_government_tracker">US Government Tracker</string>
    <string name="breakeven_title">Breakeven</string>
    <string name="all_countries">All Countries (2)</string>
    <string name="select">select</string>
    <string name="meituan">Meituan</string>
    <string name="china">China</string>
    <string name="consumer_cyclical">Consumer Cyclical</string>
    <string name="_248_69b">248.69B</string>
    <string name="_30_09_2022">30.09.2022</string>
    <string name="_3690_hk">3690.HK</string>
    <string name="best_to_worst">Best to Worst</string>
    <string name="all_instruments">All Instruments</string>
    <string name="page_1_36">Page: 1/36</string>
    <string name="_1_month">1 Month</string>
    <string name="home">Home</string>
    <string name="symbol">Symbol</string>
    <string name="instrument">Instrument</string>
    <string name="best_correlation">Best Correlation</string>
    <string name="win_rate">Win Rate %</string>
    <string name="gsada">GSADA</string>
    <string name="_90_00">90.00%</string>
    <string name="_3y">[3y]</string>
    <string name="_100_00">100.00%</string>
    <string name="diriction">Diriction</string>
    <string name="direction">Direction</string>
    <string name="avg_return">Avg Return%</string>
    <string name="open_date">Open Date</string>
    <string name="close_date">Close Date</string>
    <string name="_20_00">20.00%</string>
    <string name="_8_12_2024y">8.12.2024y.</string>
    <string name="_7_03_2025y">7.03.2025y.</string>
    <string name="view_opportunity">View Opportunity</string>
    <string name="breakeven_quarter">Breakeven Quarter</string>
    <string name="ai_agent">AI AGENT</string>
</resources>