<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/intro_background"
    tools:context=".activities.IntroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/splash_name"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_contentDescription"
        android:src="@drawable/ic_task_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="@color/primary_text_color"
        android:text="@string/let_s_get_started"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/forecaster_means_profits"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/primary_text_color"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop= "8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/white_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop= "8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"/>

</LinearLayout>