<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvHeaderSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/symbol"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvHeaderInstrument"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left"
            android:text="@string/instrument"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvHeaderCorrelation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/best_correlation"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvHeaderWinRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/win_rate"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>