<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:gravity="center"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp"
    android:id="@+id/cv_quantum_screener_expandable_item"
    >
    
    <LinearLayout
        android:id="@+id/ll_stock_item_quantum_screener_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_first_row_quantum_screener_content_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_stock_symbol_quantum_screener_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gsada"
                android:textSize="16sp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_stock_icon_quantum_screener"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_board_place_holder"/>
                <TextView
                    android:id="@+id/tv_stock_id_quantum_screener"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gsada"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginStart="5dp">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_green"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_stock_percentage_correlation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_90_00"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginEnd="8dp"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textColor="@color/green"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_stock_year_correlation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/_3y"
                    android:layout_marginStart="5dp"
                    android:gravity="left"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_stock_win_rate_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_100_00"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginEnd="5dp"/>





        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_expandable_additional_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:layout_marginTop="5dp"
                >

                <LinearLayout
                    android:id="@+id/second_row_header_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@color/colorAccent"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_second_row_direction"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/direction"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_second_row_avg_return"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/avg_return"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_second_row_open_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/open_date"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_second_row_close_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/close_date"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_second_row_quantum_screener_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_stock_direction_quantum_screener_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Long"
                    android:textSize="16sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_stock_avg_return_quantum_screener_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_20_00"
                    android:textSize="16sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_stock_open_date_quantum_screener_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_8_12_2024y"
                    android:textSize="16sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_stock_close_date_quantum_screener_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_7_03_2025y"
                    android:textSize="16sp"
                    android:gravity="center"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider_color"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btn_view_opportunity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_rounded"
                android:layout_marginTop="5dp"
                android:text="@string/view_opportunity"
                android:textSize="16sp"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>