<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_task_calendar_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_calendar_dialog"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider_color"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_task_name_dialog_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/task_name"
                android:textSize="21sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_task_description_dialog_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/task_description"
                android:textSize="21sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_task_dialog_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_rounded"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/add_task"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            />

        <Button
            android:id="@+id/btn_cancel_task_dialog_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_shape_button_rounded"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAllCaps="true"/>

        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>