<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    android:id="@+id/ll_break_even_main_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivStockIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_board_place_holder" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            >


            <TextView
                android:id="@+id/tvStockID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3690_hk"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvStockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meituan"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivCountryFlag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_board_place_holder" />


            <TextView
                android:id="@+id/tvCountryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/china"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="3dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvBreakevenQuarter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_30_09_2022"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_expandable_information_break_even"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_secondHeader_additional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@color/colorAccent"
                    android:layout_gravity="center_vertical"
                    >
                    <TextView
                        android:id="@+id/tvHeaderSector"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Sector"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white" />


                    <TextView
                        android:id="@+id/tvHeaderMarketCap"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Market Cap"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_second_row_break_even_content_add_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvSector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/consumer_cyclical"
                android:textSize="16sp"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/tvMarketCap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/_248_69b"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/vtn_view_opp_break_even"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_rounded"
            android:text="@string/view_opportunity"
            android:foreground="?attr/selectableItemBackground"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider_color"/>
</LinearLayout>
